[gd_scene load_steps=11 format=3 uid="uid://kspsv02i5iy1"]

[ext_resource type="Script" path="res://Scenes/Card_Renderer/card_renderer.gd" id="1_mhkcl"]
[ext_resource type="Texture2D" uid="uid://bl3xprvcul5w6" path="res://Assets/UI/hp.png" id="1_mrwpo"]
[ext_resource type="Texture2D" uid="uid://c4488nf15ellb" path="res://Assets/UI/attack.png" id="2_nnt1j"]
[ext_resource type="Texture2D" uid="uid://bex7eab725l2p" path="res://Assets/UI/def.png" id="3_nd038"]
[ext_resource type="Texture2D" uid="uid://dcscc4v7uxdxd" path="res://Assets/UI/move.png" id="4_w564t"]
[ext_resource type="Texture2D" uid="uid://dhu40yy3b7dly" path="res://Assets/UI/range.png" id="5_y3dqw"]
[ext_resource type="Texture2D" uid="uid://cj8h30ho7pg0u" path="res://Assets/Characters/CardSprites/cardart_3.png" id="7_6yorb"]
[ext_resource type="Texture2D" uid="uid://d00gieghcoraj" path="res://Assets/UI/cost.png" id="8_5c633"]
[ext_resource type="Texture2D" uid="uid://dguastael2jjl" path="res://Assets/UI/Gold_Border.png" id="9_ucqcp"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_swcj5"]
bg_color = Color(0.992157, 1, 0, 1)

[node name="MarginContainer" type="MarginContainer"]
texture_filter = 2
custom_minimum_size = Vector2(400, 500)
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -576.0
offset_top = -324.0
offset_right = 629.0
offset_bottom = 1243.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_mhkcl")

[node name="Panel" type="Panel" parent="."]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_swcj5")

[node name="MarginContainer2" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_left = 50
theme_override_constants/margin_top = 50
theme_override_constants/margin_right = 50
theme_override_constants/margin_bottom = 50

[node name="Bg" type="ColorRect" parent="MarginContainer2"]
layout_mode = 2
color = Color(0.913725, 0.72549, 0.588235, 1)

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer2"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="MarginContainer2" type="MarginContainer" parent="MarginContainer2/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 0
theme_override_constants/margin_top = 10

[node name="Stat_Container" type="HBoxContainer" parent="MarginContainer2/VBoxContainer/MarginContainer2"]
layout_mode = 2
theme_override_constants/separation = 25
alignment = 1

[node name="HP_Container" type="HBoxContainer" parent="MarginContainer2/VBoxContainer/MarginContainer2/Stat_Container"]
layout_mode = 2
theme_override_constants/separation = 0

[node name="HP_Icon" type="TextureRect" parent="MarginContainer2/VBoxContainer/MarginContainer2/Stat_Container/HP_Container"]
layout_mode = 2
texture = ExtResource("1_mrwpo")
expand_mode = 3

[node name="HP" type="Label" parent="MarginContainer2/VBoxContainer/MarginContainer2/Stat_Container/HP_Container"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 75
text = "30"
horizontal_alignment = 1

[node name="ATK_Container" type="HBoxContainer" parent="MarginContainer2/VBoxContainer/MarginContainer2/Stat_Container"]
layout_mode = 2
theme_override_constants/separation = 0

[node name="ATK_Icon" type="TextureRect" parent="MarginContainer2/VBoxContainer/MarginContainer2/Stat_Container/ATK_Container"]
layout_mode = 2
texture = ExtResource("2_nnt1j")
expand_mode = 3

[node name="ATK" type="Label" parent="MarginContainer2/VBoxContainer/MarginContainer2/Stat_Container/ATK_Container"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 75
text = "30"
horizontal_alignment = 1

[node name="DEF_Container" type="HBoxContainer" parent="MarginContainer2/VBoxContainer/MarginContainer2/Stat_Container"]
layout_mode = 2

[node name="DEF_Icon" type="TextureRect" parent="MarginContainer2/VBoxContainer/MarginContainer2/Stat_Container/DEF_Container"]
layout_mode = 2
texture = ExtResource("3_nd038")
expand_mode = 3

[node name="DEF" type="Label" parent="MarginContainer2/VBoxContainer/MarginContainer2/Stat_Container/DEF_Container"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 75
text = "30"
horizontal_alignment = 1

[node name="MOVE_Container" type="HBoxContainer" parent="MarginContainer2/VBoxContainer/MarginContainer2/Stat_Container"]
layout_mode = 2

[node name="Move_Icon" type="TextureRect" parent="MarginContainer2/VBoxContainer/MarginContainer2/Stat_Container/MOVE_Container"]
layout_mode = 2
texture = ExtResource("4_w564t")
expand_mode = 3

[node name="Move" type="Label" parent="MarginContainer2/VBoxContainer/MarginContainer2/Stat_Container/MOVE_Container"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 75
text = "30"
horizontal_alignment = 1

[node name="RANGE_Container" type="HBoxContainer" parent="MarginContainer2/VBoxContainer/MarginContainer2/Stat_Container"]
layout_mode = 2

[node name="Range_Icon" type="TextureRect" parent="MarginContainer2/VBoxContainer/MarginContainer2/Stat_Container/RANGE_Container"]
layout_mode = 2
texture = ExtResource("5_y3dqw")
expand_mode = 3

[node name="Range" type="Label" parent="MarginContainer2/VBoxContainer/MarginContainer2/Stat_Container/RANGE_Container"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 75
text = "30"
horizontal_alignment = 1

[node name="COST_Container" type="HBoxContainer" parent="MarginContainer2/VBoxContainer/MarginContainer2/Stat_Container"]
layout_mode = 2
theme_override_constants/separation = 50

[node name="CostArea" type="TextureRect" parent="MarginContainer2/VBoxContainer/MarginContainer2/Stat_Container/COST_Container"]
layout_mode = 2
texture = ExtResource("8_5c633")
expand_mode = 2

[node name="Cost" type="Label" parent="MarginContainer2/VBoxContainer/MarginContainer2/Stat_Container/COST_Container/CostArea"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -11.5
offset_right = 20.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 75
text = "10"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Name" type="Label" parent="MarginContainer2/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.980392, 0, 0, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 2
theme_override_constants/shadow_offset_y = 2
theme_override_constants/shadow_outline_size = 4
theme_override_font_sizes/font_size = 130
text = "NAME"
horizontal_alignment = 1
vertical_alignment = 1

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer2/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 50
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 50
theme_override_constants/margin_bottom = 10

[node name="Image_Border" type="ColorRect" parent="MarginContainer2/VBoxContainer/MarginContainer"]
custom_minimum_size = Vector2(50, 175)
layout_mode = 2
color = Color(0.0588235, 0.0588235, 0.0588235, 1)

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer2/VBoxContainer/MarginContainer"]
layout_mode = 2
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5

[node name="Card_Image" type="TextureRect" parent="MarginContainer2/VBoxContainer/MarginContainer/MarginContainer"]
custom_minimum_size = Vector2(0, 300)
layout_mode = 2
texture = ExtResource("7_6yorb")
expand_mode = 2

[node name="AttributeContainer" type="MarginContainer" parent="MarginContainer2/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_top = 40
theme_override_constants/margin_right = 0
theme_override_constants/margin_bottom = 40

[node name="MarginContainer3" type="MarginContainer" parent="MarginContainer2/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 8

[node name="Description" type="Label" parent="MarginContainer2/VBoxContainer/MarginContainer3"]
custom_minimum_size = Vector2(10, 10)
layout_mode = 2
size_flags_vertical = 1
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 75
text = "\"Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed eu magna ipsum. Nam tempus erat nisi, eu gravida diam aliquam sed. Aliquam varius neque ut leo ultricies, at semper nisi.\""
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 3

[node name="Focus" type="TextureButton" parent="."]
layout_mode = 2
toggle_mode = true
keep_pressed_outside = true
texture_pressed = ExtResource("9_ucqcp")
stretch_mode = 0

[connection signal="mouse_entered" from="Focus" to="." method="_on_focus_mouse_entered"]
[connection signal="mouse_exited" from="Focus" to="." method="_on_focus_mouse_exited"]
[connection signal="pressed" from="Focus" to="." method="_on_focus_pressed"]
